Finish heroku configuration + bug fixes for some layouts on mobile

--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -11741,6 +11741,10 @@ video {
   min-height: 100%;
 }
 
+.min-h-half {
+  min-height: 50%;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -33536,6 +33540,10 @@ video {
     min-height: 100%;
   }
 
+  .sm\:min-h-half {
+    min-height: 50%;
+  }
+
   .sm\:min-h-screen {
     min-height: 100vh;
   }
@@ -55299,6 +55307,10 @@ video {
 
   .md\:min-h-full {
     min-height: 100%;
+  }
+
+  .md\:min-h-half {
+    min-height: 50%;
   }
 
   .md\:min-h-screen {
@@ -77066,6 +77078,10 @@ video {
     min-height: 100%;
   }
 
+  .lg\:min-h-half {
+    min-height: 50%;
+  }
+
   .lg\:min-h-screen {
     min-height: 100vh;
   }
@@ -98829,6 +98845,10 @@ video {
 
   .xl\:min-h-full {
     min-height: 100%;
+  }
+
+  .xl\:min-h-half {
+    min-height: 50%;
   }
 
   .xl\:min-h-screen {
